@@ -1,7 +1,12 @@
 package com.example.footie.newSimulator;
 
 import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.concurrent.atomic.AtomicLong;
+import java.util.stream.Collectors;
 
 import com.example.footie.newSimulator.constraint.ConstraintManager;
 
@@ -11,8 +16,26 @@ public class BacktrackingSolver {
 
     int onlyCheckDomainAfter = 30;
 
+    // Node counting for search-limits
+    private final AtomicLong nodesVisited = new AtomicLong(0);
+    private volatile long maxNodes = 125L; // default: no limit
+
     public BacktrackingSolver(ConstraintManager constraintManager) {
         this.constraintManager = constraintManager;
+    }
+
+    /** Set a maximum number of search nodes to explore. Use <=0 to disable. */
+    public void setMaxNodes(long max) {
+        this.maxNodes = max > 0 ? max : Long.MAX_VALUE;
+        this.nodesVisited.set(0);
+    }
+
+    public long getNodesVisited() {
+        return nodesVisited.get();
+    }
+
+    public boolean isNodeLimitReached() {
+        return nodesVisited.get() >= maxNodes;
     }
 
     /**
@@ -21,10 +44,13 @@ public class BacktrackingSolver {
      * placement for those teams exists.
      */
     public boolean solveTeamFirst(AssignmentState state, List<Team> teamsToPlace, int depth) {
-        if (teamsToPlace.isEmpty())
-            return true; // all placed
+        long visited = nodesVisited.incrementAndGet();
+        if (visited > maxNodes) throw new RuntimeException("Node limit reached");
 
-        Team chosen = teamsToPlace.getFirst();
+        if (teamsToPlace.isEmpty())
+            return true;
+
+        Team chosen = teamsToPlace.get(0);
 
         List<GroupSlot> candidates = state.candidateSlots(chosen);
         for (GroupSlot slot : candidates) {
@@ -32,7 +58,7 @@ public class BacktrackingSolver {
                 continue;
             }
 
-            AssignmentState.DomainsSnapshot snapshot = assignWithSnapshot(state, slot, chosen, depth);
+            AssignmentSnapshot snapshot = assignWithSnapshot(state, slot, chosen, depth);
             if (snapshot == null)
                 continue;
 
@@ -53,27 +79,69 @@ public class BacktrackingSolver {
      * domains before the assignment. Returns null if the assignment immediately
      * causes a domain wipeout.
      */
-    public AssignmentState.DomainsSnapshot assignWithSnapshot(AssignmentState state, GroupSlot slot, Team team,
-            int depth) {
-        AssignmentState.DomainsSnapshot oldDomains = state.snapshotDomains(slot);
+    public AssignmentSnapshot assignWithSnapshot(AssignmentState state, GroupSlot slot, Team team, int depth) {
+        // create a snapshot from the state (captures domains + assignments)
+        AssignmentSnapshot oldSnapshot = state.createSnapshot();
 
         state.assign(slot, team);
         constraintManager.forwardCheck(state, slot, team);
 
-        if (dontCheckConsistencyBefore(depth))
-            return oldDomains;
+        // summarize domain changes after forward-check (only show diffs)
+        // summarizeDomainChanges(oldSnapshot.getDomainsSnapshot(), stateCopy, depth);
+
+        if (this.dontCheckConsistencyBefore(depth))
+            return oldSnapshot;
 
         // Run global consistency checks (AC-3, Hall/missing-team, domain wipeout)
         if (!constraintManager.checkGlobalConsistency(state)) {
-            state.restoreFromSnapshot(oldDomains);
+            oldSnapshot.restore();
             return null;
         }
 
-        return oldDomains;
+        return oldSnapshot;
     }
 
     private boolean dontCheckConsistencyBefore(int depth) {
         return depth < onlyCheckDomainAfter;
     }
 
+
+    // Summarize domain changes: print only slots whose domain changed (removed/added)
+    @SuppressWarnings("unused")
+    private void summarizeDomainChanges(Map<GroupSlot, Set<Team>> before, AssignmentState afterState, int depth) {
+        for (GroupSlot s : before.keySet()) {
+            Set<Team> beforeSet = before.getOrDefault(s, Set.of());
+            Set<Team> afterSet = afterState.getDomains().getOrDefault(s, Set.of());
+            // compute removed and added
+            Set<Team> removed = new HashSet<>(beforeSet);
+            removed.removeAll(afterSet);
+            Set<Team> added = new HashSet<>(afterSet);
+            added.removeAll(beforeSet);
+            if (removed.isEmpty() && added.isEmpty())
+                continue;
+            StringBuilder sb = new StringBuilder();
+            sb.append(s).append(": ");
+            if (!removed.isEmpty()) {
+                sb.append("removed=");
+                sb.append(removed.stream().map(Object::toString).collect(Collectors.joining(", ")));
+            }
+            if (!added.isEmpty()) {
+                if (!removed.isEmpty())
+                    sb.append("; ");
+                sb.append("added=");
+                sb.append(added.stream().map(Object::toString).collect(Collectors.joining(", ")));
+            }
+            sb.append(" (").append(beforeSet.size()).append("->").append(afterSet.size()).append(")");
+            log(depth, sb.toString());
+        }
+    }
+
+    // helper for visual backtrack logging
+    private void log(int depth, String msg) {
+        String indent = "";
+        if (depth > 0) {
+            indent = "  ".repeat(Math.max(0, depth));
+        }
+        System.out.println(indent + msg);
+    }
 }
